Bug 1097941 - Properly disable paint-will-resample on b2g. r=jmuizel